// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Phase 29 Tranche 7c — narrative snapshot stability > English preset translator output (30 gens) is stable 1`] = `
{
  "generation": 30,
  "outputs": [
    {
      "english": "the king sees the wolf",
      "target": "ðə kɪŋ siːz ðə wʊlf",
    },
    {
      "english": "the dogs see the wolves",
      "target": "ðə dʌgs siː ðə wʊlfs",
    },
    {
      "english": "i give you the bread",
      "target": "aj gɪvɪŋ ju",
    },
    {
      "english": "the king walks at the river",
      "target": "ðə kɪŋ wʌkɪŋz æt ðə dɪvəd",
    },
    {
      "english": "the king does not see the wolf",
      "target": "ðə kɪŋ nat siːz ðə wʊlf",
    },
  ],
  "preset": "english",
}
`;

exports[`Phase 29 Tranche 7c — narrative snapshot stability > Romance preset translator output (30 gens) is stable 1`] = `
{
  "generation": 30,
  "outputs": [
    {
      "english": "the king sees the wolf",
      "target": "reːgeː shireːəθ lupuum",
    },
    {
      "english": "the dogs see the wolves",
      "target": "hahaneː shireːənt lulupuum",
    },
    {
      "english": "i give you the bread",
      "target": "ego dareo tuum",
    },
    {
      "english": "the king walks at the river",
      "target": "reːgeː abbulareːθ hlubeː",
    },
    {
      "english": "the king does not see the wolf",
      "target": "reːgeː non shireːəθ lupuum",
    },
  ],
  "preset": "romance",
}
`;

exports[`Phase 29 Tranche 7c — narrative snapshot stability > Toki Pona preset translator output (30 gens) is stable 1`] = `
{
  "generation": 30,
  "outputs": [
    {
      "english": "the king sees the wolf",
      "target": "nibinibi lukin soweni",
    },
    {
      "english": "the dogs see the wolves",
      "target": "sosoweni lukin sosoweni",
    },
    {
      "english": "i give you the bread",
      "target": "mi pana sina",
    },
    {
      "english": "the king walks at the river",
      "target": "nibinibi tʼawatawo saki telosuno",
    },
    {
      "english": "the king does not see the wolf",
      "target": "nibinibi ala lukin soweni",
    },
  ],
  "preset": "tokipona",
}
`;
